# web-api/app/Http/Controllers/Api/CategoriesController.php
@@ -6,6 +6,8 @@ use App\Http\Controllers\Controller;
 use App\Models\Categories;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Intervention\Image\Drivers\Gd\Driver;
+use Intervention\Image\ImageManager;
 
 class CategoriesController extends Controller
 {
@@ -48,7 +50,24 @@ class CategoriesController extends Controller
      */
     public function create(Request $request) : JsonResponse
     {
+        $folderName =  public_path('upload');
+        if (!file_exists($folderName)) {
+            mkdir($folderName, 0777); // Створити папку з правами доступу 0777
+        }
+
         $inputs = $request->all();
+        $image = $request->file("image");
+        $imageName = uniqid().".webp";
+        $sizes = [50, 150, 300, 600, 1200];
+        $manager = new ImageManager(new Driver());
+        foreach($sizes as $size) {
+            $fileSave = $size ."_".$imageName;
+            $imageRead = $manager->read($image);
+            $imageRead->scale(width: $size);
+            $path = public_path('upload/'.$fileSave);
+            $imageRead->toWebp()->save($path);
+        }
+        $inputs["image"] = $imageName;
         $category = Categories::create($inputs);
 
         return response()->json($category, 201)
@@ -83,43 +102,67 @@ class CategoriesController extends Controller
     }
 
     /**
-     * @OA\Put(
-     *     path="/api/categories/{id}",
+     * @OA\Post(
      *     tags={"Category"},
-     *     summary="Update category by ID",
+     *     path="/api/categories/edit/{id}",
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
+     *         description="Ідентифікатор категорії",
      *         required=true,
      *         description="ID of the category",
-     *         @OA\Schema(type="integer")
+     *         @OA\Schema(
+     *              type="number",
+     *              format="int64"
+     *          )
      *     ),
      *     @OA\RequestBody(
-     *         required=true,
      *         @OA\MediaType(
-     *             mediaType="application/json",
+     *             mediaType="multipart/form-data",
      *             @OA\Schema(
-     *                 type="object",
-     *                 @OA\Property(property="name", type="string")
+     *                 required={"name"},
+     *                   @OA\Property(
+     *                       property="image",
+     *                       type="file"
+     *                   ),
+     *                  @OA\Property(
+     *                      property="name",
+     *                      type="string"
+     *                  )
      *             )
      *         )
      *     ),
-     *     @OA\Response(response="200", description="Category updated"),
-     *     @OA\Response(response="404", description="Category not found")
+     *     @OA\Response(response="200", description="Add Category.")
      * )
      */
-    public function update(Request $request, int $id): JsonResponse
-    {
-        $category = Categories::find($id);
+    public function edit($id, Request $request) : JsonResponse {
+        $category = Categories::findOrFail($id);
+        $imageName=$category->image;
+        $inputs = $request->all();
 
-        if (!$category) {
-            return response()->json(['message' => 'Category not found'], 404);
+        if($request->hasFile("image")) {
+            $image = $request->file("image");
+            $imageName = uniqid() . ".webp";
+            $sizes = [50, 150, 300, 600, 1200];
+            // create image manager with desired driver
+            $manager = new ImageManager(new Driver());
+            foreach ($sizes as $size) {
+                $fileSave = $size . "_" . $imageName;
+                $imageRead = $manager->read($image);
+                $imageRead->scale(width: $size);
+                $path = public_path('upload/' . $fileSave);
+                $imageRead->toWebp()->save($path);
+                $removeImage = public_path('upload/'.$size."_". $category->image);
+                if(file_exists($removeImage))
+                    unlink($removeImage);
+            }
         }
-
-        $category->update($request->all());
-
-        return response()->json($category);
+        $inputs["image"]= $imageName;
+        $category->update($inputs);
+        return response()->json($category,200,
+            ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
     }
+
 
     /**
      * @OA\Delete(
@@ -137,16 +180,16 @@ class CategoriesController extends Controller
      *     @OA\Response(response="404", description="Category not found")
      * )
      */
-    public function delete(int $id): JsonResponse
-    {
-        $category = Categories::find($id);
-
-        if (!$category) {
-            return response()->json(['message' => 'Category not found'], 404);
+    public function delete($id) : JsonResponse {
+        $category = Categories::findOrFail($id);
+        $sizes = [50,150,300,600,1200];
+        foreach ($sizes as $size) {
+            $fileSave = $size."_".$category->image;
+            $path=public_path('upload/'.$fileSave);
+            if(file_exists($path))
+                unlink($path);
         }
-
         $category->delete();
-
-        return response()->json(['message' => 'Category deleted successfully']);
+        return response()->json("",200, ['Charset' => 'utf-8']);
     }
 }
